# eventviews

./: .clang-tidy  .codespellrc  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .krazy  .pre-commit-config.yaml  CMakeLists.txt  KF5EventViewsConfig.cmake.in  KPimEventViewsConfig.cmake.in  REUSE.toml  cppcheck-suppressions.xml  eventviews.categories  eventviews.renamecategories  metainfo.yaml
po/ar/: libeventviews.po  libeventviews6.po
po/ast/: libeventviews.po  libeventviews6.po
po/bg/: libeventviews.po  libeventviews6.po
po/bs/: libeventviews.po  libeventviews6.po
po/ca/: libeventviews.po  libeventviews6.po
po/ca@valencia/: libeventviews.po  libeventviews6.po
po/cs/: libeventviews.po  libeventviews6.po
po/da/: libeventviews.po  libeventviews6.po
po/de/: libeventviews.po  libeventviews6.po
po/el/: libeventviews.po  libeventviews6.po
po/en_GB/: libeventviews.po  libeventviews6.po
po/eo/: libeventviews.po  libeventviews6.po
po/es/: libeventviews.po  libeventviews6.po
po/et/: libeventviews.po  libeventviews6.po
po/eu/: libeventviews.po  libeventviews6.po
po/fi/: libeventviews.po  libeventviews6.po
po/fr/: libeventviews.po  libeventviews6.po
po/ga/: libeventviews.po  libeventviews6.po
po/gl/: libeventviews.po  libeventviews6.po
po/he/: libeventviews6.po
po/hi/: libeventviews6.po
po/hu/: libeventviews.po  libeventviews6.po
po/ia/: libeventviews.po  libeventviews6.po
po/it/: libeventviews.po  libeventviews6.po
po/ja/: libeventviews.po  libeventviews6.po
po/ka/: libeventviews.po  libeventviews6.po
po/kk/: libeventviews.po  libeventviews6.po
po/ko/: libeventviews.po  libeventviews6.po
po/lt/: libeventviews.po  libeventviews6.po
po/lv/: libeventviews6.po
po/mr/: libeventviews.po  libeventviews6.po
po/nb/: libeventviews.po  libeventviews6.po
po/nds/: libeventviews.po  libeventviews6.po
po/nl/: libeventviews.po  libeventviews6.po
po/pa/: libeventviews.po  libeventviews6.po
po/pl/: libeventviews.po  libeventviews6.po
po/pt/: libeventviews.po  libeventviews6.po
po/pt_BR/: libeventviews.po  libeventviews6.po
po/ro/: libeventviews.po  libeventviews6.po
po/ru/: libeventviews.po  libeventviews6.po
po/sa/: libeventviews6.po
po/sk/: libeventviews.po  libeventviews6.po
po/sl/: libeventviews.po  libeventviews6.po
po/sv/: libeventviews.po  libeventviews6.po
po/ta/: libeventviews.po  libeventviews6.po
po/tr/: libeventviews.po  libeventviews6.po
po/ug/: libeventviews.po  libeventviews6.po
po/uk/: libeventviews.po  libeventviews6.po
po/zh_CN/: libeventviews.po  libeventviews6.po
po/zh_TW/: libeventviews.po  libeventviews6.po
src/: CMakeLists.txt  Messages.sh  eventview.cpp  eventview.h  eventview_p.cpp  eventview_p.h  eventviews-index.qdoc  eventviews.kcfg  eventviews.qdoc  eventviews.qdocconf  helper.cpp  helper.h  prefs.cpp  prefs.h  prefs_base.kcfgc
src/agenda/: agenda.cpp  agenda.h  agendaitem.cpp  agendaitem.h  agendaview.cpp  agendaview.h  alternatelabel.cpp  alternatelabel.h  calendardecoration.cpp  calendardecoration.desktop  calendardecoration.h  decorationlabel.cpp  decorationlabel.h  timelabels.cpp  timelabels.h  timelabelszone.cpp  timelabelszone.h  timescaleconfigdialog.cpp  timescaleconfigdialog.h  timescaleedit_base.ui  viewcalendar.cpp  viewcalendar.h
src/journal/: journalframe.cpp  journalframe.h  journalview.cpp  journalview.h
src/list/: listview.cpp  listview.h
src/month/: monthgraphicsitems.cpp  monthgraphicsitems.h  monthitem.cpp  monthitem.h  monthscene.cpp  monthscene.h  monthview.cpp  monthview.h
src/month/autotests/: CMakeLists.txt  monthitemordertest.cpp
src/multiagenda/: configdialoginterface.h  multiagendaview.cpp  multiagendaview.h
src/timeline/: timelineitem.cpp  timelineitem.h  timelineview.cpp  timelineview.h  timelineview_p.cpp  timelineview_p.h
src/timespent/: timespentview.cpp  timespentview.h
src/todo/: coloredtodoproxymodel.cpp  coloredtodoproxymodel.h  incidencetreemodel.cpp  incidencetreemodel.h  incidencetreemodel_p.h  tododelegates.cpp  tododelegates.h  todomodel.cpp  todomodel.h  todomodel_p.h  todoview.cpp  todoview.h  todoviewquickaddline.cpp  todoviewquickaddline.h  todoviewquicksearch.cpp  todoviewquicksearch.h  todoviewsortfilterproxymodel.cpp  todoviewsortfilterproxymodel.h  todoviewview.cpp  todoviewview.h
src/viewerapp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.kcfg
src/whatsnext/: whatsnextview.cpp  whatsnextview.h
tests/: CMakeLists.txt  createcolorgui_test.cpp  createcolorgui_test.h
